# platformops-cicd

./: .gitignore  Jenkinsfile
backend/: README.md  alembic.ini  backend_code_combined.txt  backend_garage.txt  docker-compose.smtp.yml  pyproject.toml  requirements.txt  ~$README.md
backend/alembic/: env copy.py  env.py
backend/alembic/versions/: 4cac3247ff0b_add_incident_lifecycle_and_scope.py  d70a10ed7d0c_initial_schema.py
backend/app/: main.py
backend/app/api/: alerts.py  analytics.py  anomalies.py  auth.py  components.py  deps.py  incidents.py  patterns.py  propagation.py  simulator.py  system.py  timeseries.py  users.py
backend/app/core/: config copy.py  config.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/ingestion/: csv_loader.py  ingest_cli.py
backend/app/observability/: baseline.py  family_thresholds.py  metric_families.py
backend/app/schemas/: alerts.py  analytics.py  auth.py  signal.py  timeseries.py  user.py
backend/app/scripts/: generate_signals.py
backend/app/services/: alert_autogen_service.py  alert_notification_serice.py  alert_rule_generator.py  alert_rule_service.py  alert_service copy.py  alert_service.py  alerts_insight_service.py  analytics_service.py  anomaly_analysis_service copy.py  anomaly_analysis_service.py  anomaly_impact_service.py  anomaly_injection_service.py  anomaly_insight_service.py  anomaly_rollback_service.py  auth_service.py  components_service.py  (+10 more)
backend/backend_prompt_code/: main.txt
backend/platformops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+280 files in other folders)
